--- a/AMC_Engine/AMC_Engine.vcxproj
+++ b/AMC_Engine/AMC_Engine.vcxproj
@@ -71,6 +71,11 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <EnableClangTidyCodeAnalysis>true</EnableClangTidyCodeAnalysis>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -134,8 +139,10 @@
     <ClCompile Include="AMC_Flow.cpp" />
     <ClCompile Include="AMC_Math.cpp" />
     <ClCompile Include="AMC_Smoothing.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AMC_Engine.h" />
     <ClInclude Include="AMC_Exercise.h" />
     <ClInclude Include="AMC_Flow.h" />
     <ClInclude Include="AMC_Math.h" />
